feat: #1 adicionado o ts-node-dev e os scripts de build e start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Um app para controle de entrega de encomendas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
   }
 }
