--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "bcryptjs": "^2.4.3",
       "class-validator": "^0.12.2",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
+      "helmet": "^4.1.1",
+      "jsonwebtoken": "^8.5.1",
       "pg": "^8.3.3",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.28"
    },
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
+      "@types/body-parser": "^1.19.0",
+      "@types/cors": "^2.8.7",
       "@types/express": "^4.17.8",
+      "@types/helmet": "0.0.48",
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^14.11.2",
       "ts-node": "^9.0.0",
       "ts-node-dev": "^1.0.0-pre.63",
