feat: #4 ajuste nos migrations da tabela users

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,8 +6,8 @@
    "username": "entregadb",
    "password": "entregadb",
    "database": "entregadb",
-   "synchronize": true,
-   "logging": true,
+   "synchronize": false,
+   "logging": false,
    "entities": [
     "src/models/**/*.ts"
     ],
